--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start-dev":"nodemon index.js",
+    "start-dev": "nodemon index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
   "author": "KevinSDJ (Henry bootcamp)",
@@ -18,10 +18,11 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "express-session": "^1.17.2",
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
